Bug 1121350 - Fix extra space on right from whitespace. r=roc, a=sledru

This patch is backported from bug 1116635.